Update AT firmware V2.0.3.0

--- a/AT Firmware/ReleaseNotes.txt
+++ b/AT Firmware/ReleaseNotes.txt
@@ -1,4 +1,15 @@
 /********************************************************/
+Version 2.0.3.0
+features
+1. Adapt to Actility certification test
+2. Integrate all bands and use the at+band command to switch regional bands.
+   The currently supported bands are: EU868, US915, AU915, KR920, AS923£¬IN865
+
+bugs
+1. Fix device enters the sleep state by sending the at+sleep command. 
+   The device was unable to send any command issues after waking up the device.
+
+/********************************************************/
 version 2.0.2.2:
 features
 1. update LoraWAN 1.0.1 to LoraWAN 1.0.2, support regions: 
